Fix close button alignment in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -9909,7 +9909,7 @@ div.desc {
   background-color: transparent;
   color: white;
   cursor: pointer;
-  
+  font-size: 50px;
 }
 
 @media (max-width: 390px) {
@@ -9945,7 +9945,7 @@ div.desc {
   width: 50px;
   height: 53px;
   background-color: transparent;
-  font-size: 49px;
+  font-size: 30px;
   color: white;
   cursor: pointer;
   background: rgb(0 0 0 / 45%);
